Bug 1758760 - Do not expire first scrollable frame displayport. r=tnikkel,botond

Do not allow the displayport for the first scrollable frame to expire.

Differential Revision: https://phabricator.services.mozilla.com/D169861