layout/generic/nsGfxScrollFrame.h
@@ -562,6 +562,14 @@ class ScrollFrameHelper : public nsIReflowCallback {
 
   bool IsRootScrollFrameOfDocument() const { return mIsRoot; }
 
+  Maybe<uint32_t> IsFirstScrollableFrameSequenceNumber() const {
+    return mIsFirstScrollableFrameSequenceNumber;
+  }
+
+  void SetIsFirstScrollableFrameSequenceNumber(Maybe<uint32_t> aValue) {
+    mIsFirstScrollableFrameSequenceNumber = aValue;
+  }
+
   bool SmoothScrollVisual(
       const nsPoint& aVisualViewportOffset,
       mozilla::layers::FrameMetrics::ScrollOffsetUpdateType aUpdateType);
@@ -681,6 +689,10 @@ class ScrollFrameHelper : public nsIReflowCallback {
   // process of starting or in progress" you need to check mScrollUpdates,
   // mApzAnimationRequested, and this type.
   APZScrollAnimationType mCurrentAPZScrollAnimationType;
+
+  // The paint sequence number if the scroll frame is the first scrollable frame
+  // encountered.
+  Maybe<uint32_t> mIsFirstScrollableFrameSequenceNumber;
 
   // Representing whether the APZC corresponding to this frame is now in the
   // middle of handling a gesture (e.g. a pan gesture).
@@ -1338,6 +1350,14 @@ class nsHTMLScrollFrame : public nsContainerFrame,
     return mHelper.IsRootScrollFrameOfDocument();
   }
 
+  Maybe<uint32_t> IsFirstScrollableFrameSequenceNumber() const final {
+    return mHelper.IsFirstScrollableFrameSequenceNumber();
+  }
+
+  void SetIsFirstScrollableFrameSequenceNumber(Maybe<uint32_t> aValue) final {
+    return mHelper.SetIsFirstScrollableFrameSequenceNumber(aValue);
+  }
+
   const ScrollAnchorContainer* Anchor() const final { return &mHelper.mAnchor; }
 
   ScrollAnchorContainer* Anchor() final { return &mHelper.mAnchor; }
@@ -1822,6 +1842,14 @@ class nsXULScrollFrame final : public nsBoxFrame,
 
   bool IsRootScrollFrameOfDocument() const final {
     return mHelper.IsRootScrollFrameOfDocument();
+  }
+
+  Maybe<uint32_t> IsFirstScrollableFrameSequenceNumber() const final {
+    return mHelper.IsFirstScrollableFrameSequenceNumber();
+  }
+
+  void SetIsFirstScrollableFrameSequenceNumber(Maybe<uint32_t> aValue) final {
+    return mHelper.SetIsFirstScrollableFrameSequenceNumber(aValue);
   }
 
   const ScrollAnchorContainer* Anchor() const final { return &mHelper.mAnchor; }
